kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-app-deployment
  namespace: library-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-app
  template:
    metadata:
      labels:
        app: library-app
    spec:
      containers:
        - name: library-app
          image: marijapost/library-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
