kubernetes/deployment-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: library-db
spec:
  serviceName: library-db-service
  replicas: 1
  selector:
    matchLabels:
      app: library-db
  template:
    metadata:
      labels:
        app: library-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: library-db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: library-db-data
          persistentVolumeClaim:
            claimName: library-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: library-db-service
spec:
  selector:
    app: library-db
  ports:
    - port: 5432
      targetPort: 5432
