kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app-service
spec:
  selector:
    app: library-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
